--- a/deployment/k8s/base/secrets.yaml
+++ b/deployment/k8s/base/secrets.yaml
@@ -1,37 +1,35 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: fabric-secrets
+  name: fabric-management-secrets
   namespace: fabric-management
 type: Opaque
 data:
-  # Database credentials (base64 encoded)
-  POSTGRES_USER: ZmFicmljX2FkbWlu # fabric_admin
-  POSTGRES_PASSWORD: RmFicmljQWRtaW4yMDI1IQ== # FabricAdmin2025!
+  # Database Passwords (base64 encoded)
+  POSTGRES_USER: ZmFicmljX3VzZXI= # fabric_user
+  POSTGRES_PASSWORD: ZmFicmljX3Bhc3N3b3Jk # fabric_password
+  AUTH_DB_PASSWORD: YXV0aF9zZXJ2aWNlX3Bhc3N3b3Jk # auth_service_password
+  USER_DB_PASSWORD: dXNlcl9zZXJ2aWNlX3Bhc3N3b3Jk # user_service_password
+  COMPANY_DB_PASSWORD: Y29tcGFueV9zZXJ2aWNlX3Bhc3N3b3Jk # company_service_password
+  CONTACT_DB_PASSWORD: Y29udGFjdF9zZXJ2aWNlX3Bhc3N3b3Jk # contact_service_password
 
-  # Redis password
-  REDIS_PASSWORD: UmVkaXNQYXNzd29yZDIwMjUh # RedisPassword2025!
-
-  # RabbitMQ credentials
-  RABBITMQ_USER: ZmFicmljX21x # fabric_mq
-  RABBITMQ_PASSWORD: RmFicmljTVEyMDI1IQ== # FabricMQ2025!
+  # Redis Password
+  REDIS_PASSWORD: cmVkaXNfcGFzc3dvcmQ= # redis_password
 
   # JWT Secret
-  JWT_SECRET: ZmFicmljLW1hbmFnZW1lbnQtand0LXNlY3JldC0yMDI1LXByb2R1Y3Rpb24= # fabric-management-jwt-secret-2025-production
+  JWT_SECRET: ZmFicmljLW1hbmFnZW1lbnQtand0LXNlY3JldC0yMDI1 # fabric-management-jwt-secret-2025
 
-  # Service-specific database passwords
-  AUTH_DB_PASSWORD: QXV0aFNlcnZpY2UyMDI1IQ== # AuthService2025!
-  USER_DB_PASSWORD: VXNlclNlcnZpY2UyMDI1IQ== # UserService2025!
-  CONTACT_DB_PASSWORD: Q29udGFjdFNlcnZpY2UyMDI1IQ== # ContactService2025!
-  COMPANY_DB_PASSWORD: Q29tcGFueVNlcnZpY2UyMDI1IQ== # CompanyService2025!
+  # External API Keys
+  GOOGLE_MAPS_API_KEY: eW91ci1nb29nbGUtbWFwcy1hcGkta2V5 # your-google-maps-api-key
+
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: external-api-secrets
+  name: postgres-secrets
   namespace: fabric-management
 type: Opaque
 data:
-  # External API keys (replace with actual values)
-  GOOGLE_MAPS_API_KEY: eW91ci1nb29nbGUtbWFwcy1hcGkta2V5 # your-google-maps-api-key
-
+  POSTGRES_DB: ZmFicmljX21hbmFnZW1lbnQ= # fabric_management
+  POSTGRES_USER: ZmFicmljX3VzZXI= # fabric_user
+  POSTGRES_PASSWORD: ZmFicmljX3Bhc3N3b3Jk # fabric_password
