--- a/.env.example
+++ b/.env.example
@@ -1,90 +1,59 @@
-# ==============================================
-# FABRIC MANAGEMENT SYSTEM - ENVIRONMENT TEMPLATE
-# ==============================================
-# Copy this file to .env and update with your actual values
+# =============================================================================
+# FABRIC MANAGEMENT SYSTEM - ENVIRONMENT VARIABLES
+# =============================================================================
+# Extracted from existing application.yml configurations
 
-# ==============================================
-# SYSTEM CONFIGURATION
-# ==============================================
-SPRING_PROFILES_ACTIVE=local
-SYSTEM_TIMEZONE=Europe/Istanbul
-SYSTEM_LOCALE=tr_TR
+# =============================================================================
+# SERVICE PORTS (FROM EXISTING APPLICATION.YML FILES)
+# =============================================================================
+AUTH_SERVICE_PORT=8081
+USER_SERVICE_PORT=8082
+COMPANY_SERVICE_PORT=8083
+CONTACT_SERVICE_PORT=8084
 
-# ==============================================
-# DATABASE CONFIGURATION
-# ==============================================
+# =============================================================================
+# DATABASE CONFIGURATION (FROM EXISTING CONFIGS)
+# =============================================================================
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5433
 POSTGRES_DB=fabric_management
-POSTGRES_USER=your_db_user
-POSTGRES_PASSWORD=your_secure_password
+POSTGRES_USER=fabric_user
+POSTGRES_PASSWORD=fabric_password
 
-DB_POOL_MIN_SIZE=5
-DB_POOL_MAX_SIZE=20
-DB_CONNECTION_TIMEOUT=20000
-DB_IDLE_TIMEOUT=300000
-
-# ==============================================
-# MICROSERVICES PORTS
-# ==============================================
-USER_SERVICE_PORT=8081
-CONTACT_SERVICE_PORT=8082
-COMPANY_SERVICE_PORT=8083
-NOTIFICATION_SERVICE_PORT=8084
-API_GATEWAY_PORT=8080
-
-# ==============================================
-# SECURITY CONFIGURATION
-# ==============================================
-JWT_SECRET=your_jwt_secret_key_here
-JWT_EXPIRATION=86400000
-JWT_REFRESH_EXPIRATION=604800000
-
-# ==============================================
-# API KEYS (Replace with your actual keys)
-# ==============================================
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key
-SENDGRID_API_KEY=your_sendgrid_api_key
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-
-# ==============================================
-# EXTERNAL SERVICES
-# ==============================================
+# =============================================================================
+# INFRASTRUCTURE SERVICES
+# =============================================================================
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=your_redis_password
+REDIS_PASSWORD=
 
-RABBITMQ_HOST=localhost
-RABBITMQ_PORT=5672
-RABBITMQ_USER=your_rabbitmq_user
-RABBITMQ_PASSWORD=your_rabbitmq_password
+# Kafka Configuration
+KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+ZOOKEEPER_PORT=2181
 
-# ==============================================
-# MONITORING & LOGGING
-# ==============================================
-LOG_LEVEL=INFO
-METRICS_ENABLED=true
-PROMETHEUS_ENABLED=true
-JAEGER_ENABLED=false
+# =============================================================================
+# DOCKER CONFIGURATION
+# =============================================================================
+# Database
+POSTGRES_DOCKER_PORT=5433
+REDIS_DOCKER_PORT=6379
 
-# ==============================================
-# DEVELOPMENT SETTINGS
-# ==============================================
-DEBUG_MODE=false
-SWAGGER_ENABLED=true
-H2_CONSOLE_ENABLED=false
+# Kafka & Zookeeper
+KAFKA_DOCKER_PORT=9092
+ZOOKEEPER_DOCKER_PORT=2181
 
-# ==============================================
-# BUSINESS LOGIC SETTINGS
-# ==============================================
-GEOCODING_PROVIDER=google
-GEOCODING_CACHE_TTL=86400
-GEOCODING_RATE_LIMIT=50
+# =============================================================================
+# SPRING PROFILES
+# =============================================================================
+SPRING_PROFILES_ACTIVE=local
 
-MAX_FILE_SIZE=50MB
-MAX_REQUEST_SIZE=50MB
-FILE_STORAGE_PATH=/tmp/fabric-uploads
+# =============================================================================
+# JVM CONFIGURATION
+# =============================================================================
+JAVA_OPTS=-Xms512m -Xmx1024m -XX:+UseG1GC
 
-MAIL_FROM=noreply@fabricmanagement.com
-MAIL_REPLY_TO=support@fabricmanagement.com
+# =============================================================================
+# PRODUCTION OVERRIDES (Uncomment for production)
+# =============================================================================
+# SPRING_PROFILES_ACTIVE=prod
+# JAVA_OPTS=-Xms1024m -Xmx2048m -XX:+UseG1GC -XX:+UseStringDeduplication
