--- a/deployment/k8s/base/namespace.yaml
+++ b/deployment/k8s/base/namespace.yaml
@@ -4,39 +4,6 @@ metadata:
   name: fabric-management
   labels:
     name: fabric-management
-    environment: production
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: fabric-service-account
-  namespace: fabric-management
-automountServiceAccountToken: true
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  namespace: fabric-management
-  name: fabric-service-role
-rules:
-- apiGroups: [""]
-  resources: ["configmaps", "secrets", "services"]
-  verbs: ["get", "list", "watch"]
-- apiGroups: ["apps"]
-  resources: ["deployments"]
-  verbs: ["get", "list", "watch"]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: fabric-service-binding
-  namespace: fabric-management
-subjects:
-- kind: ServiceAccount
-  name: fabric-service-account
-  namespace: fabric-management
-roleRef:
-  kind: Role
-  name: fabric-service-role
-  apiGroup: rbac.authorization.k8s.io
+    app.kubernetes.io/name: fabric-management
+    app.kubernetes.io/version: "1.0.0"
 
