--- a/deployment/k8s/infrastructure/api-gateway.yaml
+++ b/deployment/k8s/infrastructure/api-gateway.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: fabric-management
   labels:
     app: api-gateway
-    version: v1
 spec:
   replicas: 2
   selector:
@@ -15,113 +14,84 @@ spec:
     metadata:
       labels:
         app: api-gateway
-        version: v1
     spec:
-      serviceAccountName: fabric-service-account
       containers:
-      - name: api-gateway
+      - name: nginx
         image: nginx:1.25-alpine
         ports:
         - containerPort: 80
           name: http
         - containerPort: 443
           name: https
+        volumeMounts:
+        - name: nginx-config
+          mountPath: /etc/nginx/conf.d
         resources:
           requests:
             memory: "128Mi"
             cpu: "100m"
           limits:
             memory: "256Mi"
-            cpu: "200m"
+            cpu: "250m"
         livenessProbe:
           httpGet:
             path: /health
             port: 80
           initialDelaySeconds: 30
           periodSeconds: 10
-          timeoutSeconds: 5
-          failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /health
             port: 80
           initialDelaySeconds: 5
           periodSeconds: 5
-          timeoutSeconds: 3
-        volumeMounts:
-        - name: nginx-config
-          mountPath: /etc/nginx/nginx.conf
-          subPath: nginx.conf
-        - name: nginx-config
-          mountPath: /etc/nginx/conf.d/default.conf
-          subPath: default.conf
       volumes:
       - name: nginx-config
         configMap:
-          name: api-gateway-config
+          name: nginx-config
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: api-gateway
   namespace: fabric-management
-  labels:
-    app: api-gateway
 spec:
   selector:
     app: api-gateway
   ports:
-  - name: http
-    port: 80
+  - port: 80
     targetPort: 80
-  - name: https
-    port: 443
+    name: http
+  - port: 443
     targetPort: 443
+    name: https
   type: LoadBalancer
+
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: api-gateway-config
+  name: nginx-config
   namespace: fabric-management
 data:
-  nginx.conf: |
-    events {
-        worker_connections 1024;
+  default.conf: |
+    upstream auth-service {
+        server auth-service:8081;  # Using exact port from application.yml
     }
     
-    http {
-        upstream auth_service {
-            server auth-service:8080;
-        }
-        
-        upstream user_service {
-            server user-service:8081;
-        }
-        
-        upstream contact_service {
-            server contact-service:8082;
-        }
-        
-        upstream company_service {
-            server company-service:8083;
-        }
-        
-        # Rate limiting
-        limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-        
-        # Logging
-        log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                       '$status $body_bytes_sent "$http_referer" '
-                       '"$http_user_agent" "$http_x_forwarded_for"';
-        
-        access_log /var/log/nginx/access.log main;
-        error_log /var/log/nginx/error.log warn;
-        
-        include /etc/nginx/conf.d/*.conf;
+    upstream user-service {
+        server user-service:8082;  # Using exact port from application.yml
     }
-
-  default.conf: |
+    
+    upstream company-service {
+        server company-service:8083;  # Using exact port from application.yml
+    }
+    
+    upstream contact-service {
+        server contact-service:8084;  # Using exact port from application.yml
+    }
+    
     server {
         listen 80;
         server_name _;
@@ -133,55 +103,44 @@ data:
             add_header Content-Type text/plain;
         }
         
-        # CORS headers
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-        
-        # Auth Service Routes
-        location /api/auth/ {
-            limit_req zone=api burst=20 nodelay;
-            proxy_pass http://auth_service/;
+        # Auth Service - Port 8081
+        location /api/v1/auth/ {
+            proxy_pass http://auth-service/api/v1/auth/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         
-        # User Service Routes
-        location /api/users/ {
-            limit_req zone=api burst=20 nodelay;
-            proxy_pass http://user_service/;
+        # User Service - Port 8082
+        location /api/v1/users/ {
+            proxy_pass http://user-service/api/v1/users/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         
-        # Contact Service Routes
-        location /api/contacts/ {
-            limit_req zone=api burst=20 nodelay;
-            proxy_pass http://contact_service/;
+        # Company Service - Port 8083
+        location /api/v1/companies/ {
+            proxy_pass http://company-service/api/v1/companies/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         
-        # Company Service Routes
-        location /api/companies/ {
-            limit_req zone=api burst=20 nodelay;
-            proxy_pass http://company_service/;
+        # Contact Service - Port 8084
+        location /api/v1/contacts/ {
+            proxy_pass http://contact-service/api/v1/contacts/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         
-        # Management endpoints (restricted)
-        location /actuator/ {
-            deny all;
-            return 403;
+        # Default location
+        location / {
+            return 404;
         }
     }
-
