--- a/deployment/k8s/services/auth-service.yaml
+++ b/deployment/k8s/services/auth-service.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: fabric-management
   labels:
     app: auth-service
-    version: v1
 spec:
   replicas: 2
   selector:
@@ -15,7 +14,6 @@ spec:
     metadata:
       labels:
         app: auth-service
-        version: v1
     spec:
       serviceAccountName: fabric-service-account
       containers:
@@ -23,7 +21,7 @@ spec:
         image: fabric-management/auth-service:latest
         imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 8080
+        - containerPort: 8081  # Using exact port from application.yml
           name: http
         - containerPort: 9080
           name: management
@@ -31,94 +29,90 @@ spec:
         - name: SPRING_PROFILES_ACTIVE
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: SPRING_PROFILES_ACTIVE
         - name: POSTGRES_HOST
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: POSTGRES_HOST
         - name: POSTGRES_PORT
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: POSTGRES_PORT
         - name: POSTGRES_DB
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: POSTGRES_DB
         - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
-              name: fabric-secrets
+              name: fabric-management-secrets
               key: POSTGRES_USER
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: fabric-secrets
-              key: AUTH_DB_PASSWORD
+              name: fabric-management-secrets
+              key: POSTGRES_PASSWORD
         - name: REDIS_HOST
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: REDIS_HOST
         - name: REDIS_PORT
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: REDIS_PORT
         - name: REDIS_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: fabric-secrets
+              name: fabric-management-secrets
               key: REDIS_PASSWORD
         - name: JWT_SECRET
           valueFrom:
             secretKeyRef:
-              name: fabric-secrets
+              name: fabric-management-secrets
               key: JWT_SECRET
+        - name: JAVA_OPTS
+          valueFrom:
+            configMapKeyRef:
+              name: fabric-management-config
+              key: JAVA_OPTS
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
-            memory: "512Mi"
+            memory: "1Gi"
             cpu: "500m"
+          limits:
+            memory: "2Gi"
+            cpu: "1000m"
         livenessProbe:
           httpGet:
-            path: /actuator/health/liveness
-            port: 9080
+            path: /api/v1/auth/actuator/health
+            port: 8081  # Using exact port from application.yml
           initialDelaySeconds: 60
           periodSeconds: 30
-          timeoutSeconds: 10
-          failureThreshold: 3
         readinessProbe:
           httpGet:
-            path: /actuator/health/readiness
-            port: 9080
+            path: /api/v1/auth/actuator/health/readiness
+            port: 8081  # Using exact port from application.yml
           initialDelaySeconds: 30
           periodSeconds: 10
-          timeoutSeconds: 5
-          failureThreshold: 3
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: auth-service
   namespace: fabric-management
-  labels:
-    app: auth-service
 spec:
   selector:
     app: auth-service
   ports:
-  - name: http
-    port: 8080
-    targetPort: 8080
-  - name: management
-    port: 9080
-    targetPort: 9080
+  - port: 8081  # Using exact port from application.yml
+    targetPort: 8081
+    name: http
   type: ClusterIP
 ---
 apiVersion: autoscaling/v2
@@ -146,4 +140,3 @@ spec:
       target:
         type: Utilization
         averageUtilization: 80
-
