--- a/deployment/k8s/services/contact-service.yaml
+++ b/deployment/k8s/services/contact-service.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: fabric-management
   labels:
     app: contact-service
-    version: v1
 spec:
   replicas: 2
   selector:
@@ -15,7 +14,6 @@ spec:
     metadata:
       labels:
         app: contact-service
-        version: v1
     spec:
       serviceAccountName: fabric-service-account
       containers:
@@ -23,108 +21,104 @@ spec:
         image: fabric-management/contact-service:latest
         imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 8082
+        - containerPort: 8084  # Using exact port from application.yml
           name: http
-        - containerPort: 9082
-          name: management
         env:
         - name: SPRING_PROFILES_ACTIVE
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: SPRING_PROFILES_ACTIVE
         - name: POSTGRES_HOST
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: POSTGRES_HOST
         - name: POSTGRES_PORT
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: POSTGRES_PORT
         - name: POSTGRES_DB
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: POSTGRES_DB
         - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
-              name: fabric-secrets
+              name: fabric-management-secrets
               key: POSTGRES_USER
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: fabric-secrets
-              key: CONTACT_DB_PASSWORD
+              name: fabric-management-secrets
+              key: POSTGRES_PASSWORD
         - name: REDIS_HOST
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: REDIS_HOST
         - name: REDIS_PORT
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: REDIS_PORT
         - name: REDIS_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: fabric-secrets
+              name: fabric-management-secrets
               key: REDIS_PASSWORD
         - name: AUTH_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: AUTH_SERVICE_URL
         - name: GOOGLE_MAPS_API_KEY
           valueFrom:
             secretKeyRef:
-              name: external-api-secrets
+              name: fabric-management-secrets
               key: GOOGLE_MAPS_API_KEY
+        - name: JAVA_OPTS
+          valueFrom:
+            configMapKeyRef:
+              name: fabric-management-config
+              key: JAVA_OPTS
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
-            memory: "512Mi"
+            memory: "1Gi"
             cpu: "500m"
+          limits:
+            memory: "2Gi"
+            cpu: "1000m"
         livenessProbe:
           httpGet:
-            path: /actuator/health/liveness
-            port: 9082
+            path: /api/v1/contacts/actuator/health
+            port: 8084  # Using exact port from application.yml
           initialDelaySeconds: 60
           periodSeconds: 30
-          timeoutSeconds: 10
-          failureThreshold: 3
         readinessProbe:
           httpGet:
-            path: /actuator/health/readiness
-            port: 9082
+            path: /api/v1/contacts/actuator/health/readiness
+            port: 8084  # Using exact port from application.yml
           initialDelaySeconds: 30
           periodSeconds: 10
-          timeoutSeconds: 5
-          failureThreshold: 3
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: contact-service
   namespace: fabric-management
-  labels:
-    app: contact-service
 spec:
   selector:
     app: contact-service
   ports:
-  - name: http
-    port: 8082
-    targetPort: 8082
-  - name: management
-    port: 9082
-    targetPort: 9082
+  - port: 8084  # Using exact port from application.yml
+    targetPort: 8084
+    name: http
   type: ClusterIP
+
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
@@ -151,4 +145,3 @@ spec:
       target:
         type: Utilization
         averageUtilization: 80
-
