--- a/deployment/k8s/services/user-service.yaml
+++ b/deployment/k8s/services/user-service.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: fabric-management
   labels:
     app: user-service
-    version: v1
 spec:
   replicas: 2
   selector:
@@ -15,111 +14,104 @@ spec:
     metadata:
       labels:
         app: user-service
-        version: v1
     spec:
-      serviceAccountName: fabric-service-account
       containers:
       - name: user-service
         image: fabric-management/user-service:latest
-        imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 8081
+        - containerPort: 8082  # Using exact port from application.yml
           name: http
-        - containerPort: 9081
-          name: management
         env:
         - name: SPRING_PROFILES_ACTIVE
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: SPRING_PROFILES_ACTIVE
         - name: POSTGRES_HOST
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: POSTGRES_HOST
         - name: POSTGRES_PORT
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: POSTGRES_PORT
         - name: POSTGRES_DB
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: POSTGRES_DB
         - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
-              name: fabric-secrets
+              name: fabric-management-secrets
               key: POSTGRES_USER
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: fabric-secrets
-              key: USER_DB_PASSWORD
+              name: fabric-management-secrets
+              key: POSTGRES_PASSWORD
         - name: REDIS_HOST
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: REDIS_HOST
         - name: REDIS_PORT
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: REDIS_PORT
         - name: REDIS_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: fabric-secrets
+              name: fabric-management-secrets
               key: REDIS_PASSWORD
         - name: AUTH_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: fabric-config
+              name: fabric-management-config
               key: AUTH_SERVICE_URL
+        - name: JAVA_OPTS
+          valueFrom:
+            configMapKeyRef:
+              name: fabric-management-config
+              key: JAVA_OPTS
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
-            memory: "512Mi"
+            memory: "1Gi"
             cpu: "500m"
+          limits:
+            memory: "2Gi"
+            cpu: "1000m"
         livenessProbe:
           httpGet:
-            path: /actuator/health/liveness
-            port: 9081
+            path: /api/v1/users/actuator/health
+            port: 8082  # Using exact port from application.yml
           initialDelaySeconds: 60
           periodSeconds: 30
-          timeoutSeconds: 10
-          failureThreshold: 3
         readinessProbe:
           httpGet:
-            path: /actuator/health/readiness
-            port: 9081
+            path: /api/v1/users/actuator/health/readiness
+            port: 8082  # Using exact port from application.yml
           initialDelaySeconds: 30
           periodSeconds: 10
-          timeoutSeconds: 5
-          failureThreshold: 3
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: user-service
   namespace: fabric-management
-  labels:
-    app: user-service
 spec:
   selector:
     app: user-service
   ports:
-  - name: http
-    port: 8081
-    targetPort: 8081
-  - name: management
-    port: 9081
-    targetPort: 9081
+  - port: 8082  # Using exact port from application.yml
+    targetPort: 8082
+    name: http
   type: ClusterIP
+
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
@@ -132,7 +124,7 @@ spec:
     kind: Deployment
     name: user-service
   minReplicas: 2
-  maxReplicas: 8
+  maxReplicas: 10
   metrics:
   - type: Resource
     resource:
@@ -146,4 +138,3 @@ spec:
       target:
         type: Utilization
         averageUtilization: 80
-
