--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,11 +38,11 @@ services:
     deploy:
       resources:
         limits:
+          memory: 2G
+          cpus: '1.0'
+        reservations:
           memory: 1G
           cpus: '0.5'
-        reservations:
-          memory: 512M
-          cpus: '0.25'
 
   # ==============================================
   # CACHE & SESSION STORE
@@ -67,10 +67,10 @@ services:
       resources:
         limits:
           memory: 512M
-          cpus: '0.25'
+          cpus: '0.5'
         reservations:
           memory: 256M
-          cpus: '0.1'
+          cpus: '0.25'
 
   # ==============================================
   # MESSAGE QUEUE
@@ -137,11 +137,11 @@ services:
     deploy:
       resources:
         limits:
-          memory: 512M
-          cpus: '0.5'
+          memory: 2.5G
+          cpus: '1.0'
         reservations:
-          memory: 256M
-          cpus: '0.25'
+          memory: 1G
+          cpus: '0.5'
 
   user-service:
     image: fabric-management/user-service:latest
@@ -178,11 +178,11 @@ services:
     deploy:
       resources:
         limits:
-          memory: 512M
-          cpus: '0.5'
+          memory: 2.5G
+          cpus: '1.0'
         reservations:
-          memory: 256M
-          cpus: '0.25'
+          memory: 1G
+          cpus: '0.5'
 
   contact-service:
     image: fabric-management/contact-service:latest
@@ -220,11 +220,11 @@ services:
     deploy:
       resources:
         limits:
-          memory: 512M
-          cpus: '0.5'
+          memory: 2.5G
+          cpus: '1.0'
         reservations:
-          memory: 256M
-          cpus: '0.25'
+          memory: 1G
+          cpus: '0.5'
 
   company-service:
     image: fabric-management/company-service:latest
@@ -264,11 +264,11 @@ services:
     deploy:
       resources:
         limits:
-          memory: 512M
-          cpus: '0.5'
+          memory: 2.5G
+          cpus: '1.0'
         reservations:
-          memory: 256M
-          cpus: '0.25'
+          memory: 1G
+          cpus: '0.5'
 
   # ==============================================
   # API GATEWAY
