--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -1,18 +1,22 @@
-name: CI/CD Pipeline
+name: Build All Services
 
 on:
   push:
     branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME_PREFIX: fabric-management
 
 jobs:
-  test:
+  test-all:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service: [auth-service, user-service, contact-service, company-service]
+
     steps:
     - uses: actions/checkout@v4
 
@@ -21,32 +25,32 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
+        cache: maven
 
-    - name: Cache Maven dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+    - name: Build dependencies
+      run: |
+        mvn clean install -N
+        mvn clean install -f common/common-core/pom.xml
+        mvn clean install -f common/common-security/pom.xml
 
-    - name: Run tests
-      run: mvn clean test
+    - name: Test ${{ matrix.service }}
+      run: mvn test -f services/${{ matrix.service }}/pom.xml
 
-  build-and-push:
-    needs: test
+  build-all-images:
+    needs: test-all
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event_name == 'pull_request'
+    if: github.event_name == 'push'
+    permissions:
+      contents: read
+      packages: write
 
     strategy:
       matrix:
-        service: [auth-service, user-service, company-service, contact-service]
+        service: [auth-service, user-service, contact-service, company-service]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
 
     - name: Log in to Container Registry
       uses: docker/login-action@v3
@@ -55,26 +59,22 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Extract metadata
+    - name: Extract metadata for ${{ matrix.service }}
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PREFIX }}/${{ matrix.service }}
+        images: ${{ env.REGISTRY }}/fabric-management/${{ matrix.service }}
         tags: |
           type=ref,event=branch
           type=ref,event=pr
           type=sha,prefix={{branch}}-
           type=raw,value=latest,enable={{is_default_branch}}
-        labels: |
-          org.opencontainers.image.description=Fabric Management ${{ matrix.service }}
-          org.opencontainers.image.vendor=Fabric Management
 
-    - name: Build and push Docker image
+    - name: Build and push ${{ matrix.service }} Docker image
       uses: docker/build-push-action@v5
       with:
-        context: .  # CRITICAL: Use root directory as context
+        context: .  # CRITICAL: Use root directory as context for all services
         file: ./services/${{ matrix.service }}/Dockerfile
-        platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
