--- a/.github/workflows/user-service.yml
+++ b/.github/workflows/user-service.yml
@@ -1,14 +1,22 @@
-name: CI/CD Pipeline
+name: User Service CI/CD
 
 on:
   push:
     branches: [ main, develop ]
+    paths:
+      - 'services/user-service/**'
+      - 'common/**'
+      - 'pom.xml'
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
+    paths:
+      - 'services/user-service/**'
+      - 'common/**'
+      - 'pom.xml'
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME_PREFIX: fabric-management
+  IMAGE_NAME: fabric-management/user-service
 
 jobs:
   test:
@@ -21,32 +29,26 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
-
-    - name: Cache Maven dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+        cache: maven
 
     - name: Run tests
-      run: mvn clean test
+      run: |
+        mvn clean install -N
+        mvn clean install -f common/common-core/pom.xml
+        mvn clean install -f common/common-security/pom.xml
+        mvn test -f services/user-service/pom.xml
 
   build-and-push:
     needs: test
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event_name == 'pull_request'
-
-    strategy:
-      matrix:
-        service: [auth-service, user-service, company-service, contact-service]
+    if: github.event_name == 'push'
+    permissions:
+      contents: read
+      packages: write
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
 
     - name: Log in to Container Registry
       uses: docker/login-action@v3
@@ -59,24 +61,20 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PREFIX }}/${{ matrix.service }}
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
           type=ref,event=branch
           type=ref,event=pr
           type=sha,prefix={{branch}}-
           type=raw,value=latest,enable={{is_default_branch}}
-        labels: |
-          org.opencontainers.image.description=Fabric Management ${{ matrix.service }}
-          org.opencontainers.image.vendor=Fabric Management
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
         context: .  # CRITICAL: Use root directory as context
-        file: ./services/${{ matrix.service }}/Dockerfile
-        platforms: linux/amd64,linux/arm64
+        file: ./services/user-service/Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha,scope=${{ matrix.service }}
-        cache-to: type=gha,mode=max,scope=${{ matrix.service }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
